5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1616_2920.log
== SUBMITION (2019-04-01 14:11:16) 
-- CODE:
p = float(input())
b= float(input())
s= float(input())
print(p+b+s)
-- EXECUTION TIME:
0.217112
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
896.12
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
390.03
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
226.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:22:10) 
-- CODE:
p = float(input(" gramas "))
b= float(input(" suco "))
s= float(input(" sobremesa "))
print(p+b+s)
-- OUTPUT:
896.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:23:07) 
-- CODE:
p = float(input(" gramas "))
P = p/26.90
b= float(input(" suco "))
s= float(input(" sobremesa "))
print(p+b+s)
-- OUTPUT:
896.12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 14:31:03) 
-- CODE:
p = float(input(" gramas "))
b= float(input(" suco "))
s= float(input(" sobremesa "))
g = (26.90 * 1000)
S = 3.50
z = 3.00
print(round(p+b+s),2)
-- EXECUTION TIME:
0.176309
-- TEST CASE 1:
---- input:
896.12
0
0
---- correct output:
24.11
---- user output:
896 2
-- TEST CASE 2:
---- input:
389.03
1
0
---- correct output:
13.96
---- user output:
390 2
-- TEST CASE 3:
---- input:
225.89
0
1
---- correct output:
9.08
---- user output:
227 2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:05) 
-- CODE:
p = float(input(" gramas "))
b= float(input(" suco "))
s= float(input(" sobremesa "))
g = (26.90 * 1000)
S = 3.50
z = 3.00
print(round(p+b+s),2)
-- OUTPUT:
896 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:31:53) 
-- CODE:
p = float(input(" gramas "))
b= float(input(" suco "))
s= float(input(" sobremesa "))
g = (26.90 * 1000)
S = 3.50
z = 3.00
print(round(p*g+b*S+s*z),2)
-- OUTPUT:
24105628 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:21) 
-- CODE:
p = int(input(" gramas "))
b= int(input(" suco "))
s= int(input(" sobremesa "))
g = 26.90
y = 3.50
z = 3.00
print(round((p*g*1000)+(b*y*1000)+(z*s*1000),2)
-- ERROR:
File "XXXX", line 8
    
                                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:38:38) 
-- CODE:
p = int(input(" gramas "))
b= int(input(" suco "))
s= int(input(" sobremesa "))
g = 26.90
y = 3.50
z = 3.00
print(round((p*g*1000)+(b*y*1000)+(z*s*1000)),2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    p = int(input())
ValueError: invalid literal for int() with base 10: '896.12'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:49:47) 
-- CODE:
p = float(input(" gramas "))
b= float(input(" suco "))
s= float(input(" sobremesa "))
g = 26.90
y = 3.50
z = 3.00

print(round(,2)
-- ERROR:
File "XXXX", line 8
    print(round(,2)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 14:49:52) 
-- CODE:
p = float(input(" gramas "))
b= float(input(" suco "))
s= float(input(" sobremesa "))
g = 26.90
y = 3.50
z = 3.00


-- ERROR:
File "XXXX", line 8
    print(round(,2)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
